--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
+<head>
+<meta charset="utf-8" />
 <style type="text/css">
    body { background: #000; color: #aaa; font-family: sans-serif; }
    #p { font-size: 2em; display: block; }
    #l { display: none; }
 </style>
 <title>COLORSPACE</title>
+</head>
 <body>
 <center>
 	<p id="l">Loading...</p><button id="p">Run game</button>
