--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8" />
 <style type="text/css">
    body { background: #000; color: #aaa; font-family: sans-serif; }
-   #p { font-size: 2em; display: block; }
-   #l { display: none; }
+   #p { font-size: 2em; display: none; }
+   #l { display: block; }
 </style>
 <title>COLORSPACE</title>
 </head>
 <body>
 <center>
-	<p id="l">Loading...</p><button id="p">Run game</button>
+	<p id="l">Loading...</p><button id="p">Start game</button>
 	<canvas id="c" width="800" height="600"></canvas>
 </center>
 <script type="module" src="index.js"></script>
