--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
 	#load { display: block; }
 	#loud { display: none; }
 </style>
-<title>COLORSPACE</title>
+<title>GAMUT SHIFT</title>
 </head>
 <body>
 <center>
 	<div id="title">
-		<p id="logo">COLORSPACE</p>
+		<p id="logo">GAMUT SHIFT</p>
 		<button id="cont">Continue</button>
 		<button id="play">Start new game</button>
 		<p id="loud">(loud audio ahead)</p>
